--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Page</title>
 </head>
+
 <body>
-    <h1>Welcome to My Page</h1>
+    <h1>THIS IS INDEX PAGE</h1>
+    <a href="pages/about.html">This is a link to about</a>
+    <br>
+    <a href="pages/contact.html">This is a link to contact</a>
 </body>
+
 </html>
